LPROG/grammar/LabeledExpr.g4
grammar LabeledExpr;

prog: info+ ;

info:    ID  TITLE  WELCOME_MESSAGE* FINAL_MESSAGE* LIST_OF_SECTIONS section+;

section:   SECTION_ID SECTION_TITLE SECTION_DESCRIPTION*  OBLIGATORINESS REPEATABILITY* CONTENT question+;

question: QUESTION_ID Q INSTRUCTION* OBLIGATORINESS questionType;

questionType :     free_text
                 | multipleChoice
                 | multipleChoiceWithInput
                 | singleChoice
                 | singleChoiceWithInput
                 | numeric
                 | sortingOptions
                 | scalingOptions;

free_text: FREE_TEXT EXTRA_INFO? SENTENCE?;
multipleChoice: MULTIPLE_CHOICE EXTRA_INFO CHOOSE+;
multipleChoiceWithInput: MULTIPLE_CHOICE_INPUT_VALUE EXTRA_INFO CHOOSE+;
singleChoice: SINGLE_CHOICE EXTRA_INFO CHOOSE+;
singleChoiceWithInput: SINGLE_CHOICE_INPUT_VALUE EXTRA_INFO CHOOSE+;
sortingOptions: SORTING_OPTIONS EXTRA_INFO CHOOSE+;
scalingOptions: SCALING_OPTIONS EXTRA_INFO CHOOSE+;
numeric: NUMERIC EXTRA_INFO? NUMBER?;

ALPHANUMERIC: [a-zA-Z0-9]+;
SENTENCE: [.,!?' a-zA-Z0-9()+/]+ | [/.,!?'a-zA-Z0-9()+]+;
NUMBER: [0-9]+;
STRING: [0-9A-Za-z]+;
RANGE_OPTIONS: STRING'-'STRING+;
OBLIGATORINESS_ENUM: 'MANDATORY' | 'OPTIONAL' | 'CONDITION_DEPENDENT'SENTENCE*;
CHOOSE: [0-9]+('- ')SENTENCE*  RANGE_OPTIONS*('|')*;

FREE_TEXT: 'TYPE: FREE_TEXT';
MULTIPLE_CHOICE: 'TYPE: MULTIPLE_CHOICE';
MULTIPLE_CHOICE_INPUT_VALUE: 'TYPE: MULTIPLE_CHOICE_INPUT_VALUE';
SINGLE_CHOICE: 'TYPE: SINGLE_CHOICE';
SINGLE_CHOICE_INPUT_VALUE: 'TYPE: SINGLE_CHOICE_INPUT_VALUE';
NUMERIC: 'TYPE: NUMERIC';
SORTING_OPTIONS: 'TYPE: SORTING_OPTIONS';
SCALING_OPTIONS: 'TYPE: SCALING_OPTIONS';

ID: 'ID: ' ALPHANUMERIC;
TITLE: 'TITLE: ' SENTENCE;
WELCOME_MESSAGE: 'WELCOME MESSAGE: ' SENTENCE;
FINAL_MESSAGE: 'FINAL MESSAGE: ' SENTENCE;
LIST_OF_SECTIONS: 'LIST OF SECTIONS:';
CONTENT: 'CONTENT:';
SECTION_ID: 'SECTION ID: ' NUMBER;
SECTION_TITLE: 'SECTION TITLE: ' SENTENCE;
SECTION_DESCRIPTION: 'SECTION DESCRIPTION: ' SENTENCE;
OBLIGATORINESS: 'OBLIGATORINESS: ' OBLIGATORINESS_ENUM;
REPEATABILITY:'REPEATABILITY: ' SENTENCE;
INSTRUCTION: 'INSTRUCTION: ' SENTENCE;
QUESTION_ID: 'QUESTION ID: ' NUMBER;
Q: 'Q: ' SENTENCE;
EXTRA_INFO: 'EXTRA INFO: ';

WS : [\t\r\n]+ -> skip;
